# ProjetoFinalEmbarca

./: CMakeLists.txt  README.md
pio/: ws2818b.pio
src/: main.c
